--- a/config.yml
+++ b/config.yml
@@ -13,8 +13,15 @@ optimizer: "lazyadam"
 summaries_dir: './results/Summaries/'
 gpu: 0
 word_dim: 100
-batch_size: 128
+batch_size: 5
 keep_porb: 0.5
 # checkpoint_dir
-checkpoint_dir: './results/checkpoint/model'
+checkpoint_dir: './results/checkpoint/bert/model'
 nwords: 21128
+
+# bert
+# bert_dir: &bert_dir '/mnt/nlp/bert/chinese_L-12_H-768_A-12/'
+bert_dir: '/Volumes/HddData/ProjectData/NLP/bert/chinese_L-12_H-768_A-12/'
+bert_init_checkpoint: "bert_model.ckpt"
+bert_vocab: "vocab.txt"
+bert_config: "bert_config.json"
