add avg pooling

--- a/configs/config_bert.yml
+++ b/configs/config_bert.yml
@@ -18,7 +18,7 @@ keep_porb: 0.5
 # checkpoint_dir
 checkpoint_dir: './results/checkpoint/bert/model'
 nwords: 21128
-use_avg_polling: 1
+use_avg_pooling: 1
 
 # bert
 # bert_dir: &bert_dir '/mnt/nlp/bert/chinese_L-12_H-768_A-12/'
